# budgetaar

./: .gitignore  README.md  create-data.sh  docker-compose.yaml  grafana.sh
budgetaar/: package.json
budgetaar-server/: Cargo.toml
budgetaar-server/sql/: compute-monthly-aggregate.sql  compute-stream-breakdown.sql  init.sql  list-transactions.sql  read-statement-fib.sql  transactions-from-raw-data.sql  update-heuristic-streams.sql  update-monthly-aggregate.sql
budgetaar-server/src/: api.rs  main.rs
budgetaar-web/src/: App.tsx
budgetaar/src/: App.tsx
grafana-config/: datasources.yaml  grafana.ini
scripts/: create-data.sh  parse-raw-data.sql
