[package]
name = "budgetaar-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
duckdb = { version = "1.1.1", features = ["bundled", "chrono", "json"] }
iban_validate = "5.0.1"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3" }

tower = "0.5"
tower-http = {version = "0.6", features = ["trace"]}